added to conclusion

--- a/clientpresentation.qmd
+++ b/clientpresentation.qmd
@@ -103,6 +103,12 @@ Rosowski et al.'s findings suggest that there were differences in average absorb
 
 -   How do we even classify race?
 
-![](Screenshot 2024-12-08 at 5.01.56 PM.png)
+> *Research indicates that the prevalence of hearing loss does differ across races, with studies consistently showing that non-Hispanic Black individuals generally have lower rates of hearing loss compared to non-Hispanic White individuals; meaning deafness may appear less frequently in the Black population compared to the White population.*
 
 However, the data to support these claims is insufficient. Are black individuals truly less likely to experience hearing loss, or it just underreported?
+
+## Takeaways
+
+This project reinforced the message that **data isn't everything.**
+
+## Thank You!
