--- a/TidyTuesday1.qmd
+++ b/TidyTuesday1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Refugees"
+title: "Refugees in Germany Over Time"
 description: |
   Analysis of refugee data from TidyTuesday
 author: Natalie Roston
@@ -9,6 +9,10 @@ execute:
   warning: false
   message: false
 ---
+This analysis examines refugee and asylum seeker trends in Germany using 
+TidyTuesday data. The visualizations track changes over time, highlighting the 
+distinct patterns for each group. These findings provide insight into migration 
+dynamics and Germany’s role in global displacement trends.
 
 ```{r}
 library(dplyr)
@@ -48,10 +52,14 @@ Data Science Learning Community (2024). Tidy Tuesday: A weekly social data proje
 
 -   Data from UNHCR’s annual statistical activities dating back to 1951.
 
--   Data from the United Nations Relief and Works Agency for Palestine Refugees in the Near East (UNRWA), specifically for registered Palestine refugees under UNRWA’s mandate.
+-   Data from the United Nations Relief and Works Agency for Palestine Refugees 
+in the Near East (UNRWA), specifically for registered Palestine refugees under 
+UNRWA’s mandate.
 
--   Data from the Internal Displacement Monitoring Centre (IDMC) on people displaced within their country due to conflict or violence
+-   Data from the Internal Displacement Monitoring Centre (IDMC) on people 
+displaced within their country due to conflict or violence
 
+````{=html}
 <!--
 ```{r}
 library(dplyr)
@@ -65,6 +73,4 @@ desired_variables <- population %>%
 ```
 
 -->
-
-
-
+````
