--- a/2024hackathon.qmd
+++ b/2024hackathon.qmd
@@ -1,5 +1,5 @@
 ---
-title: "2024 Hackathon Figma Wireframe"
+title: "Alcohol Safety Figma Wireframe"
 description: |
   The theme of the 2024 Claremont College Hackathon was "Tech for Good". My team created a full web prototype of our app Call Your Mom. Our product supports alcohol safety among college students by calculating a drink maximum estimate, presenting an accessible drink counter, integrating a rideshare API, and establishing a streamlined emergency services connection. 
   
@@ -10,3 +10,13 @@ execute:
   warning: false
   message: false
 ---
+
+## The Prototype
+
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/vdyq29NzU9VUcA12TfvK2I/Call-Your-Mom?node-id=1-5&amp;starting-point-node-id=1%3A5&amp;embed-host=share" allowfullscreen>
+
+</iframe>
+
+## My Role
+
+I was the principal UX Designer, but also acted as product manager as I oversaw the entire development from ideation to presentation. We made sure to conduct user testing to maintain a human-centered approach throughout our iterations.
