--- a/Sparkathon24.qmd
+++ b/Sparkathon24.qmd
@@ -1,5 +1,9 @@
 ---
 title: "Campus Rideshare Design for 2024 Sparkathon"
+description: |
+  The 2024 Sparkaton was a five hour case challenge with one prompt: Waste On Campus. After conducting user interviews, we identifed a need for better access to cars. The current options of ZipCar, Uber, and Turo
+  were either inaccessible, expensive, or sketchy for college-age students. There was a real desire for
+  rideshare **within** the Claremont College community, and thus UTurn was born. 
 author: Natalie Roston
 date: November 3, 2024
 format: html
@@ -7,12 +11,17 @@ execute:
   warning: false
   message: false
 ---
+## The Product
+U-Turn has two features that target the concept of Waste. Firstly, the rental feature allows students to
+lend cars to other students for a highly discounted rate. This mitigates economic hardship for the driver
+while keeping car usage circular within the college community. The second feature is a carpool option, an
+innovative concept that allows for students to pay for a single seat in a car already going to that destination.
+This way, students can lower carbon emissions by sharing transportation. It is also an accessible and
+cheap option for someone who might not have a car or license.
 
 ## The Prototype
 
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/9CE6v5epwauEwyovqeH81s/Uturn-Sparkathon?node-id=23-345&amp;p=f&amp;scaling=scale-down&amp;content-scaling=fixed&amp;page-id=0%3A1&amp;starting-point-node-id=3%3A2&amp;show-proto-sidebar=1&amp;embed-host=share" allowfullscreen>
-
-</iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/9CE6v5epwauEwyovqeH81s/Uturn-Sparkathon?node-id=3-40&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=3%3A40&embed-host=share" allowfullscreen></iframe>
 
 ## My Role
 
