--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -25,8 +25,18 @@ Pomona College \| Claremont, CA \| Sept 2022 - June 2026
 
 BA in Cognitive Science, Concentrating in Human-Computer Interaction. Minors in Data Science and Politics
 
+Relevant Coursework: Human-Centered Design, Intro to Computer Science, Foundations of Data Science, Machine Learning for Artists, Philosophy of Technology, Statistics for Experimental Design.
+
 ## Experience
 
 Beni \| Product Intern \| September 2024 - Present
 
 VisNa Lab at the CCNY \| Research Assistant \| May 2024 - August 2024
+
+P-ai \| User Experience Designer \| January 2024 - May 2024
+
+Pomona Consulting Group \| Associate Consultant \| January 2024 - May 2024
+
+Claremont Lewis Museum of Art \| Project Management Intern \| September 2023 - May 2024
+
+C8 Sciences \| Product Development Intern \| May 2023 - August 2023
