--- a/pitchcompetition.qmd
+++ b/pitchcompetition.qmd
@@ -1,12 +1,18 @@
 ---
-title: "First Place Venture Pitch Competition"
-#image: profile.jpeg
+title: "Duolingo Product Design"
 description: |
-  Analysis of refugee data from TidyTuesday
+  As a Duolingo user with a streak of over 150 days, I am passionate about the app. However, I had a few ideas for how Duolingo could personalize the experience; namely through use of AI at the setup stage. 
 author: Natalie Roston
-date: October 23, 2023
+date: December 29, 2024
 format: html
 execute:
   warning: false
   message: false
 ---
+
+```{=html}
+<iframe 
+    src="https://www.sketch.com/s/fa967130-4eb5-4c51-96b7-3657af31e08f/prototype/AE5663E8-6993-4D88-8C4F-2E359BE0DEA0/a/AE5663E8-6993-4D88-8C4F-2E359BE0DEA0?fullscreen=true" 
+    style="border: none; width: 100%; height: 800px;" 
+    allowfullscreen>
+</iframe>
